--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,29 +36,48 @@
 
 #columns {
   background: #141;
-  
+
   #main {
     margin-left: 17em;
     padding: 1em;
     background: white;
   } 
-  
+
   #side {
     float: left;
     padding: 1em 2em;
     width: 13em;
     background: #141;
 
-    ul {
-      padding: 0;
-      li {
-        list-style: none;
-        a {
-          color: #bfb;
-          font-size: small;
-        }
+    form, div {
+      display: inline;
+    }
+
+    input{
+      font-size: small;
+    }
+
+    #cart {
+      font-size: smaller;
+      color: white;
+    }
+    table {
+      border-top: 1 px dotted #595;
+      border-bottom: 1 px dotted #595;
+      margin-bottom: 10px;
+    }
+  }
+
+  ul {
+    padding: 0;
+    li {
+      list-style: none;
+      a {
+        color: #bfb;
+        font-size: small;
       }
     }
   }
 }
+
 
